tests/unit-tests/docs/deployment/cognito/test_data/expected/admissionregistration.k8s.io_v1beta1_validatingwebhookconfiguration_trainedmodel.serving.kubeflow.org.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: kubeflow/serving-cert
  creationTimestamp: null
  labels:
    app: kfserving
    app.kubernetes.io/name: kfserving
  name: trainedmodel.serving.kubeflow.org
webhooks:
- clientConfig:
    caBundle: Cg==
    service:
      name: kfserving-webhook-server-service
      namespace: kubeflow
      path: /validate-serving-kubeflow-org-v1alpha1-trainedmodel
  failurePolicy: Fail
  name: trainedmodel.kfserving-webhook-server.validator
  rules:
  - apiGroups:
    - serving.kubeflow.org
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - trainedmodels
